Error menor, se corrige la llave de cerrado.

--- a/FliplloServidor/InterfazGrafica/App.config
+++ b/FliplloServidor/InterfazGrafica/App.config
@@ -2,10 +2,10 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework"
-    type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-    requirePermission="false"/>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
@@ -16,7 +16,7 @@
       connectionString="metadata=res://*/ModelFlipllo.csdl|res://*/ModelFlipllo.ssdl|res://*/ModelFlipllo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CESARHDEZAP;initial catalog=BDFlipllo;user id=fliplloserver;password=qwerasdfzxcv;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient"/>
   </connectionStrings>
-  
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -34,9 +34,11 @@
         <behavior name="mexBehavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
-          
+
           <!--<serviceCredentials>
-            --><!--Aqui quite client certificate--><!--
+            -->
+          <!--Aqui quite client certificate-->
+          <!--
             
             <serviceCertificate findValue="miCertificado" 
                                 storeLocation="LocalMachine"
@@ -47,23 +49,23 @@
       </serviceBehaviors>
     </behaviors>
 
-		<bindings>
-			<netTcpBinding>
-				<binding name="NetTcpBinding_IServiciosDeFlipllo" closeTimeout="00:20:00"
-                 receiveTimeout="00:20:00" 
-                 sendTimeout="00:20:00" 
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IServiciosDeFlipllo" closeTimeout="00:20:00"
+                 receiveTimeout="00:20:00"
+                 sendTimeout="00:20:00"
                  maxBufferPoolSize="2147483647"
-					       maxReceivedMessageSize="2147483647" 
+					       maxReceivedMessageSize="2147483647"
                  maxBufferSize="2147483647"
                  transactionFlow="true">
-          
+
           <security mode="None">
             <transport clientCredentialType="None" protectionLevel="None"/>
             <message clientCredentialType="None"/>
           </security>
-				</binding>
-			</netTcpBinding>
-		</bindings>
+        </binding>
+      </netTcpBinding>
+    </bindings>
 
     <services>
       <service name="ServiciosDeComunicacion.Servicios.ServiciosDeFlipllo" behaviorConfiguration="mexBehavior">
@@ -73,7 +75,7 @@
                   bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
                   contract="ServiciosDeComunicacion.Interfaces.InterfacesDeServiciosDeFlipllo.IServiciosDeFlipllo"/>
 
-        
+
         <host>
           <baseAddresses>
             <add baseAddress="http://192.168.43.114:8081/ServiciosDeFlipllo"/>
@@ -96,6 +98,7 @@
           </baseAddresses>
         </host>
       </service>
-      
+
     </services>
   </system.serviceModel>
+</configuration>
